src/App.css
:root {
  --main: #294f59;
  --accent: #17ba83;
  --error: #750000;
  --shadow: rgba(0,0,0,0.8);
  --text: #fff;
  --accent-text: #141414;

  --main-font: 'Poppins', sans-serif;
  --accent-font: 'Raleway', sans-serif;
}

* {
  text-decoration: none;
  list-style: none;
  font-family: var(--main-font)
}

.App {
  text-align: center;
}
#root {
  height: 100%;
  width: 100%;
  overflow: hidden;
}
html, body, main-content {
  height: 100%;
  padding: 0;
  margin: 0;
  background: black;
}
#skip-link {
  position: absolute;
  top: 0;
  left: 0;
  color: var(--text);
  z-index: 20;
  font-family: var(--accent-font)
}

#title-contain {
  width: 400px;
  height: auto;
  position: absolute;
  top: 0;
  left: calc(50% - 200px);
  display: flex;
  justify-content: center;
  margin: 0 auto;
}
#title {
  width: auto;
  height: 28px;
  text-align: center;
  font-size: 20px;
  font-family: var(--main-font);
  color: var(--text);
  background: var(--main);
  padding: 10px 15px;
  box-shadow: 2px 2px 10px var(--shadow);
  border-radius: 10px;
}
#menu-button {
  width: 60px;
  height: 60px;
  background: var(--accent);
  box-shadow: 4px 4px 10px var(--shadow);
  position: fixed;
  top: 10px;
  left: 5px;
  border-radius: 50%;
  z-index: 10;
  color: #fff;
  font-size: 40px;
  text-align: center;
  cursor: pointer;
}
#map {
  height: 100vh;
  width: 100vw;
}
.sidebar {
  font-family: var(--accent-font);
  min-width: 150px;
  width: 25vw;
  height: auto;
  max-height: 80vh;
  position: absolute;
  font-size: 2.05vh;
  top: 60px;
  left: 10px;
  background: var(--main);
  color: white;
  padding: 2%;
  box-shadow: 2px 2px 10px var(--shadow);
  border-radius: 10px;
  overflow-x: scroll;
}

.unsplash-error {
  font-size: 1.2vw;
  font-family: var(--accent-font);
  color: var(--error);
}
#sidebar-photo-contain {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 0 0 4%;
}

#sidebar-photo {
  max-height: 22vh;
  max-width: 22vw;
  box-shadow: 2px 2px 10px var(--shadow);
}

.sidebar ul {
  padding: 0;
}
.sidebar li {
  padding: 0 0 10px;
}
.sidebar ul li {
  cursor: pointer;
}
#sidebar-control {
  background: var(--accent);
  height: auto;
  display: flex;
  justify-content: center;
  align-content: center;
  cursor: pointer;
  color: var(--accent-text);
}
.minimized {
  max-height: 50px;
}
.control-text {
  width: 100%;
  text-align: center;
}

#info-menu {
  position: absolute;
  left: 32.5vw;
  bottom: 0;
  padding: 0;
  margin: 0;
  height: 25vh;
  width: 65vw;
  border-radius: 0 10px 0 0;
  background: var(--accent);
  box-shadow: 2px 2px 10px var(--shadow);
}

#tab-contain {
  width: 310px;
  position: relative;
  display: flex;
  justify-content: space-between;
  position: relative;
  top: -35px;
}
.tabs {
  border-radius: 10px 10px 0 0;
  height: 35px;
  width: 100px;
  background: var(--main);
  color: var(--accent-text);
  text-align: center;
  cursor: pointer;
  font-size: 28px;
}

.tab-content {
  position: relative;
  top: 0;
  display: none;
  padding: 0;
  color: var(--accent-text);
}
.selected {
  background: var(--accent);
  display: inline;
}
#info-menu-close {
  position: absolute;
  top: 72vh;
  left: 91vw;
  height: 30px;
  width: 30px;
  background: var(--main);
  z-index: 10;
  border-radius: 50%;
  text-align: center;
  font-family: var(main-font);
  color: var(--text);
  font-weight: bold;
  font-size: 25px;
  padding: 5px;
  box-shadow: 2px 2px 10px var(--shadow);
  cursor: pointer;
}

.tab-content h2, .tab-content p {
  color: var(--accent-text);
  text-align: center;
  padding: 0;
  margin: 0;
}

#recommended-name {
  font-size: 1.2em;
}

#infomenu-photo-contain {
  display: flex;
  justify-content: space-around;
  align-content: center;
  width: 100%;
}
#infomenu-photo-contain img {
  border: 2px solid rgb(255,255,255);
  box-shadow: 2px 2px 10px var(--shadow);
  max-width: 30%;
  max-height: 18vh;
  cursor: pointer;
}

.sm-icons {
  position: absolute;
  top: 1vh;
  left: 1vw;
  width: 6%;
  z-index: 5;
  box-shadow: 2px 2px 10px var(--shadow);
  border-radius: 10px;

}

.photo-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(50,50,50,0.8);
  z-index: 15;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
.photo-overlay img {
  box-shadow: 2px 2px 10px var(--shadow);
  max-height: 80vh;
  max-width: 80vw;
}
.photo-overlay-close {
  position: relative;
  top: 0;
  left: 100%;
  background: red;
  height: 25px;
  width: 25px;
  text-align: center;
  background: var(--accent);
  border-radius: 50%;
  box-shadow: 2px 2px 10px var(--shadow);
  cursor: pointer;
}
.flickr-error {
  text-align: center;
  color: var(--error);
}
.foursquare-error {
  color: var(--error);
}

.hidden {
  display: none;
}

@media screen and (max-width: 350px) {
  .tab-content h2 {
    font-size: 4.5vw;
  }
  .tab-content p {
    font-size: 4vw;
  }
}

@media screen and (max-width: 500px) {
  #title-contain {
    top: 30px;
  }
  .sidebar {
    top: 100px;
    overflow-y: scroll;
  }
  #info-menu {
    width: 100%;
    left: 0;
  }

}

